// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contact form renders a contact form 1`] = `
<div>
  <div
    id="contact-form"
  >
    <div
      class="ui container"
      id="view"
    >
      <div
        class="ui icon negative attached message"
      >
        <i
          aria-hidden="true"
          class="warning icon"
        />
        <div
          className="header"
        >
          Error
        </div>
      </div>
    </div>
    <div
      data-schema={
        Object {
          "fieldsets": Array [
            Object {
              "fields": Array [
                "name",
                "from",
                "subject",
                "message",
              ],
              "id": "default",
              "title": "Default",
            },
          ],
          "properties": Object {
            "from": Object {
              "title": "From",
              "type": "email",
            },
            "message": Object {
              "title": "Message",
              "type": "string",
              "widget": "textarea",
            },
            "name": Object {
              "title": "Name",
              "type": "string",
            },
            "subject": Object {
              "title": "Subject",
              "type": "string",
            },
          },
          "required": Array [
            "from",
            "message",
          ],
        }
      }
      id="Form"
    />
  </div>
</div>
`;

exports[`Contact form renders a contact form with error message 1`] = `
<div>
  <div
    id="contact-form"
  >
    <div
      class="ui container"
      id="view"
    >
      <div
        class="ui icon negative attached message"
      >
        <i
          aria-hidden="true"
          class="warning icon"
        />
        <div
          className="header"
        >
          Error
        </div>
        <p>
          Error foo
        </p>
      </div>
    </div>
    <div
      data-schema={
        Object {
          "fieldsets": Array [
            Object {
              "fields": Array [
                "name",
                "from",
                "subject",
                "message",
              ],
              "id": "default",
              "title": "Default",
            },
          ],
          "properties": Object {
            "from": Object {
              "title": "From",
              "type": "email",
            },
            "message": Object {
              "title": "Message",
              "type": "string",
              "widget": "textarea",
            },
            "name": Object {
              "title": "Name",
              "type": "string",
            },
            "subject": Object {
              "title": "Subject",
              "type": "string",
            },
          },
          "required": Array [
            "from",
            "message",
          ],
        }
      }
      id="Form"
    />
    <div
      id="Portal"
    />
  </div>
</div>
`;
